# sdl3-test

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json
.cache/clangd/index/: SDL.c.2B508900AAF9FA3C.idx  SDL.h.9FB7F7BC9D85A48D.idx  SDL_RLEaccel.c.78604CC942380F04.idx  SDL_RLEaccel_c.h.2638D250621E2D78.idx  SDL_alsa_audio.c.23B65D187B5F5B04.idx  SDL_alsa_audio.h.6245A95F6142E698.idx  SDL_appid.c.E987159C31B45B2B.idx  SDL_appid.h.FDD5A36F1504734A.idx  SDL_assert.c.7651FE8C5FBCBB9C.idx  SDL_assert.h.87E08282A6554708.idx  SDL_assert_c.h.DBB9CE363E326684.idx  SDL_asyncio.c.5AA844787A757296.idx  SDL_asyncio.h.E961FC78310DF6BC.idx  SDL_asyncio_c.h.FD0ED44E08ABD96A.idx  SDL_asyncio_generic.c.B8BF457DD380E0AB.idx  SDL_atomic.c.26524CA45DC87EBB.idx  SDL_atomic.h.569535A08E93EB0A.idx  SDL_audio.c.7C704B0AD7FB40A3.idx  SDL_audio.h.C59BDA0846A0026E.idx  SDL_audio_c.h.79378B676AA52D5C.idx  SDL_audio_channel_converters.h.633EDD2790C0A796.idx  SDL_audiocvt.c.4D211B127E366AAC.idx  SDL_audiodev.c.2F9A2C0E47B7667A.idx  SDL_audioqueue.c.8373B934FE099373.idx  SDL_audioqueue.h.E673DCEB771E2DD4.idx  SDL_audioresample.c.5037A539A3A19E31.idx  SDL_audioresample.h.2B1DFAE9F5C8DE64.idx  SDL_audiotypecvt.c.A4B920ABA06A8D20.idx  SDL_begin_code.h.1ABDAB0DD98C43E7.idx  SDL_bits.h.F526AF908005B7A6.idx  SDL_blendfillrect.c.B1888203F321B150.idx  (+644 more)
Testing/: TAG
include/: game-state.h  scene-game.h  scene-map.h  scene-title.h  scene.h
resources/scripts/: overworld.lua
src/: game-state.c  main.c  scene-game.c  scene-map.c  scene-title.c
